Back to Java 21, GraalVM builds are too complicated to worry about for now Fixed some code warnings Use single databuffer in OpenAL output to prevent mild stuttering Change text entry prompt depending on what the user has selected in the tree view Fixed button stylization