@@ -4,14 +4,15 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'org.springframework.boot' version '3.5.0'
     id 'io.spring.dependency-management' version '1.1.7'
-    id 'org.graalvm.buildtools.native' version '0.10.6'
+//    id 'com.gluonhq.gluonfx-gradle-plugin' version '1.0.26'
+//    id 'org.graalvm.buildtools.native' version '0.10.6'
 }
 
 group = 'gg.grumble.client'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(24)
+        languageVersion = JavaLanguageVersion.of(21)
         vendor = JvmVendorSpec.GRAAL_VM
     }
 }
@@ -43,7 +44,7 @@ tasks.register('runClient', JavaExec) {
     outputs.upToDateWhen { false }
 }
 
-tasks.register('runAgentManual', JavaExec) {
+/*tasks.register('runAgentManual', JavaExec) {
     group = 'application'
     description = 'Run app with GraalVM native-image-agent (manually added)'
 
@@ -77,21 +78,28 @@ tasks.named("nativeCompile") {
 graalvmNative {
     toolchainDetection = false
 
+    javafx {
+        enabled = true
+    }
+
     binaries {
         main {
             javaLauncher = javaToolchains.launcherFor {
-                languageVersion = JavaLanguageVersion.of(24)
+                languageVersion = JavaLanguageVersion.of(21)
                 vendor = JvmVendorSpec.GRAAL_VM
             }
 
-            configurationFileDirectories.from("src/main/resources/META-INF/native-image")
+//            configurationFileDirectories.from("src/main/resources/META-INF/native-image")
+            configurationFileDirectories.from("build/native/agent-output/runAgentManual")
 
             buildArgs.addAll([
-                    "--enable-native-access=ALL-UNNAMED",
-                    "-H:+UnlockExperimentalVMOptions",
-                    "-H:ConfigurationFileDirectories=build/native/agent-output/runAgentManual",
+                    // include every char/set, unlock experimental
                     "-H:+AddAllCharsets",
-                    "-H:ReflectionConfigurationResources=META-INF/native-image/reflect-config.json",
+                    "-H:+UnlockExperimentalVMOptions",
+                    // report anything that would otherwise silently be dropped
+                    "--report-unsupported-elements-at-runtime",
+                    // bundle the service-loader files + any natives/…
+                    "-H:IncludeResources=META-INF/services/.*|natives/.*",
             ])
 
             resources {
@@ -101,7 +109,7 @@ graalvmNative {
             runtimeArgs.add('-Djava.home=.')
         }
     }
-}
+}*/
 
 repositories {
     mavenCentral()
@@ -109,10 +117,11 @@ repositories {
         name = "henkelmax.public"
         url = 'https://maven.maxhenkel.de/repository/public'
     }
+    gradlePluginPortal()
 }
 
 javafx {
-    version = '24.0.1'
+    version = '21.0.7'
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
 }
 
